--- a/RMDesktopUI/App.xaml
+++ b/RMDesktopUI/App.xaml
@@ -1,9 +1,16 @@
 ﻿<Application x:Class="RMDesktopUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RMDesktopUI"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:RMDesktopUI">
+
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <local:Bootstrapper x:Key="Bootstrapper"/>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
+    
 </Application>
