--- a/RMDesktopUI/Views/ShellView.xaml
+++ b/RMDesktopUI/Views/ShellView.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="RMDesktopUI.MainWindow"
+﻿<Window x:Class="RMDesktopUI.Views.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RMDesktopUI"
+        xmlns:local="clr-namespace:RMDesktopUI.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="ShellView" Height="450" Width="800">
     <Grid>
         
     </Grid>
